# app

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  main.cc  package-lock.json  package.json
resources/macos/: icon.icns
resources/windows/: resources.rc
src/: App.css  App.jsx  main.cc  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: index.html  index.js  style.css
